// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container applies custom className 1`] = `
<div>
  <div
    class="mx-auto px-6 max-w-7xl custom-container"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Container applies padding variants correctly 1`] = `
<div>
  <div
    class="mx-auto px-8 max-w-7xl"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Container applies width variants correctly 1`] = `
<div>
  <div
    class="mx-auto px-6 max-w-full"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;

exports[`Container renders children correctly 1`] = `
<div>
  <div
    class="mx-auto px-6 max-w-7xl"
  >
    <div>
      Test Container Content
    </div>
  </div>
</div>
`;

exports[`Container uses default variants when none specified 1`] = `
<div>
  <div
    class="mx-auto px-6 max-w-7xl"
  >
    <div>
      Content
    </div>
  </div>
</div>
`;
